Add basic API implementation for modules
