# backend/src/Entity/Module.php
@@ -7,9 +7,8 @@ namespace App\Entity;
 use App\Entity\Trait\SerializableTimestampableEntityTrait;
 use App\ListQueryManagement\Attribute as LqmA;
 use App\Model\RelativeUrl;
-use App\Repository\ServerRepository;
+use App\Repository\ModuleRepository;
 use App\Serializer\Interface\DepthAwareNormalizableInterface;
-use Doctrine\Common\Collections\ArrayCollection;
 use Doctrine\Common\Collections\Collection;
 use Doctrine\DBAL\Types\Types;
 use Doctrine\ORM\Mapping as ORM;
@@ -17,26 +16,27 @@ use Symfony\Bridge\Doctrine\Validator\Constraints as Assert;
 use Symfony\Component\Serializer\Attribute as Serializer;
 use Symfony\Component\Uid\Uuid;
 
-#[ORM\Entity(repositoryClass: ServerRepository::class)]
-#[ORM\UniqueConstraint(name: 'UNIQ_IDENTIFIER_SERVER_NAME', fields: ['name'])]
+#[ORM\Entity(repositoryClass: ModuleRepository::class)]
+#[ORM\UniqueConstraint(name: 'UNIQ_IDENTIFIER_MODULE_NAME', fields: ['name'])]
 #[ORM\HasLifecycleCallbacks]
 #[Assert\UniqueEntity(['name'], message: 'form.name.already_taken')]
-#[LqmA\Schema('#/components/schemas/Server')]
-#[LqmA\Orders(new LqmA\Order('id', '{server}.id'), [
-    new LqmA\Order('id', '{server}.id'),
-    new LqmA\Order('name', '{server}.name'),
-    new LqmA\Order('is_active', '{server}.isActive'),
-    new LqmA\Order('is_banned', '{server}.isBanned'),
-    new LqmA\Order('created_at', '{server}.createdAt'),
-    new LqmA\Order('updated_at', '{server}.updatedAt'),
+#[LqmA\Schema('#/components/schemas/Module')]
+#[LqmA\Orders(new LqmA\Order('id', '{module}.id'), [
+    new LqmA\Order('id', '{module}.id'),
+    new LqmA\Order('name', '{module}.name'),
+    new LqmA\Order('is_active', '{module}.isActive'),
+    new LqmA\Order('is_banned', '{module}.isBanned'),
+    new LqmA\Order('created_at', '{module}.createdAt'),
+    new LqmA\Order('updated_at', '{module}.updatedAt'),
 ])]
 #[LqmA\Search([
-    new LqmA\SearchParam('name', '{server}.name'),
-    new LqmA\SearchParam('urls', '{server}.urls', type: LqmA\SearchParam::TYPE_ARRAY),
-    new LqmA\SearchParam('client_id', '{server}.clientId', type: LqmA\SearchParam::TYPE_UUID),
+    new LqmA\SearchParam('name', '{module}.name'),
+    new LqmA\SearchParam('description', '{module}.description'),
+    new LqmA\SearchParam('urls', '{module}.urls', type: LqmA\SearchParam::TYPE_ARRAY),
+    new LqmA\SearchParam('client_id', '{module}.clientId', type: LqmA\SearchParam::TYPE_UUID),
 ])]
 #[LqmA\Pagination]
-class Server implements DepthAwareNormalizableInterface
+class Module implements DepthAwareNormalizableInterface
 {
     use SerializableTimestampableEntityTrait;
 
@@ -51,45 +51,30 @@ class Server implements DepthAwareNormalizableInterface
     #[ORM\Column(type: Types::TEXT, nullable: true)]
     private ?string $imageUrl = null;
 
-    #[ORM\Column(type: Types::JSON)]
-    private array $urls = [];
+    #[ORM\Column(type: Types::TEXT, nullable: true)]
+    private ?string $description = null;
 
     #[ORM\Column(type: 'uuid')]
     private ?Uuid $clientId = null;
 
-    #[ORM\Column(length: 255)]
-    private ?string $secret = null;
-
-    #[ORM\Column(length: 100, nullable: true)]
-    private ?string $authToken = null;
+    #[ORM\Column(type: Types::JSON)]
+    private array $urls = [];
 
     #[ORM\Column]
-    private ?bool $isActive = true;
+    private ?bool $isActive = null;
 
     #[ORM\Column]
-    private ?bool $isBanned = false;
-
-    #[ORM\ManyToOne]
-    #[ORM\JoinColumn(nullable: false)]
-    private ?User $createdBy = null;
-
-    /**
-     * @var Collection<int, User>
-     */
-    #[ORM\ManyToMany(targetEntity: User::class, inversedBy: 'servers')]
-    private Collection $users;
+    private ?bool $isBanned = null;
 
     /**
      * @var Collection<int, ServerAllowedModule>
      */
-    #[ORM\OneToMany(targetEntity: ServerAllowedModule::class, mappedBy: 'server', orphanRemoval: true)]
+    #[ORM\OneToMany(targetEntity: ServerAllowedModule::class, mappedBy: 'module', orphanRemoval: true)]
     private Collection $serverAllowedModules;
 
-    public function __construct()
-    {
-        $this->users = new ArrayCollection();
-        $this->serverAllowedModules = new ArrayCollection();
-    }
+    #[ORM\ManyToOne]
+    #[ORM\JoinColumn(nullable: false)]
+    private ?User $createdBy = null;
 
     #[Serializer\Groups(['short', 'long'])]
     #[Serializer\SerializedName('id')]
@@ -133,17 +118,38 @@ class Server implements DepthAwareNormalizableInterface
     }
 
     #[Serializer\Groups(['short', 'long'])]
+    #[Serializer\SerializedName('description')]
+    public function getDescription(): ?string
+    {
+        return $this->description;
+    }
+
+    public function setDescription(?string $description): static
+    {
+        $this->description = $description;
+
+        return $this;
+    }
+
+    #[Serializer\Groups(['short', 'long'])]
+    #[Serializer\SerializedName('client_id')]
+    public function getClientId(): ?Uuid
+    {
+        return $this->clientId;
+    }
+
+    public function setClientId(Uuid $clientId): static
+    {
+        $this->clientId = $clientId;
+
+        return $this;
+    }
+
+    #[Serializer\Groups(['short', 'long'])]
     #[Serializer\SerializedName('urls')]
     public function getUrls(): array
     {
         return $this->urls;
-    }
-
-    #[Serializer\Groups(['short', 'long'])]
-    #[Serializer\SerializedName('url')]
-    public function getUrl(): ?string
-    {
-        return empty($this->urls) ? null : reset($this->urls);
     }
 
     /**
@@ -152,32 +158,6 @@ class Server implements DepthAwareNormalizableInterface
     public function setUrls(array $urls): static
     {
         $this->urls = $urls;
-
-        return $this;
-    }
-
-    #[Serializer\Ignore]
-    public function getSecret(): ?string
-    {
-        return $this->secret;
-    }
-
-    public function setSecret(string $secret): static
-    {
-        $this->secret = $secret;
-
-        return $this;
-    }
-
-    #[Serializer\Ignore]
-    public function getAuthToken(): ?string
-    {
-        return $this->authToken;
-    }
-
-    public function setAuthToken(?string $authToken): static
-    {
-        $this->authToken = $authToken;
 
         return $this;
     }
@@ -230,63 +210,11 @@ class Server implements DepthAwareNormalizableInterface
         return $this->createdBy?->getFormattedName();
     }
 
-    /**
-     * @return Collection<int, User>
-     */
-    #[Serializer\Ignore]
-    public function getUsers(): Collection
-    {
-        return $this->users;
-    }
-
-    public function addUser(User $user): static
-    {
-        if (!$this->users->contains($user)) {
-            $this->users->add($user);
-        }
-
-        return $this;
-    }
-
-    public function removeUser(User $user): static
-    {
-        $this->users->removeElement($user);
-
-        return $this;
-    }
-
-    #[Serializer\Groups(['short', 'long'])]
-    #[Serializer\SerializedName('client_id')]
-    public function getClientId(): ?Uuid
-    {
-        return $this->clientId;
-    }
-
-    public function setClientId(Uuid $clientId): static
-    {
-        $this->clientId = $clientId;
-
-        return $this;
-    }
-
     public function generateClientId(): Uuid
     {
         $this->clientId = Uuid::v4();
 
         return $this->clientId;
-    }
-
-    public function generateSecret(): string
-    {
-        $secret = bin2hex(random_bytes(32));
-        $this->secret = sha1($secret);
-
-        return $secret;
-    }
-
-    public function validateSecret(string $secret): bool
-    {
-        return $this->secret === sha1($secret);
     }
 
     /**
@@ -302,7 +230,7 @@ class Server implements DepthAwareNormalizableInterface
     {
         if (!$this->serverAllowedModules->contains($serverAllowedModule)) {
             $this->serverAllowedModules->add($serverAllowedModule);
-            $serverAllowedModule->setServer($this);
+            $serverAllowedModule->setModule($this);
         }
 
         return $this;
@@ -312,8 +240,8 @@ class Server implements DepthAwareNormalizableInterface
     {
         if ($this->serverAllowedModules->removeElement($serverAllowedModule)) {
             // set the owning side to null (unless already changed)
-            if ($serverAllowedModule->getServer() === $this) {
-                $serverAllowedModule->setServer(null);
+            if ($serverAllowedModule->getModule() === $this) {
+                $serverAllowedModule->setModule(null);
             }
         }
 
