# backend/src/Security/Voter/ServerVoter.php
@@ -6,11 +6,18 @@ namespace App\Security\Voter;
 
 use App\Entity\Server;
 use App\Entity\User;
+use App\Enum\UserRole;
 use Symfony\Component\Security\Core\Authentication\Token\TokenInterface;
+use Symfony\Component\Security\Core\Authorization\AccessDecisionManagerInterface;
 use Symfony\Component\Security\Core\Authorization\Voter\Voter;
 
 class ServerVoter extends Voter
 {
+    public function __construct(
+        private AccessDecisionManagerInterface $accessDecisionManager,
+    ) {
+    }
+
     public const string VIEW = 'view_server';
 
     protected function supports(string $attribute, mixed $subject): bool
@@ -26,6 +33,17 @@ class ServerVoter extends Voter
             return false;
         }
 
-        return $user->getServers()->contains($subject);
+        if (!$user->getServers()->contains($subject)) {
+            return false;
+        }
+
+        if (
+            !$this->accessDecisionManager->decide($token, [UserRole::ADMIN])
+            && (!$subject->isActive() || $subject->isBanned())
+        ) {
+            return false;
+        }
+
+        return true;
     }
 }
